modules/vpc/main.tf
resource "aws_vpc" "main" {
cidr_block = var.vpc_cidr

tags = {
Name        = "${var.project_name}-vpc"
Environment = var.environment
Project     = var.project_name
}
}

resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.main.id

tags = {
Name        = "${var.project_name}-igw"
Environment = var.environment
Project     = var.project_name
}
}

resource "aws_subnet" "public_a" {
vpc_id                  = aws_vpc.main.id
cidr_block              = var.public_subnet_a_cidr
availability_zone       = "ap-south-1a"
map_public_ip_on_launch = true

tags = {
Name = "public-subnet-a"
}
}

resource "aws_subnet" "public_b" {
vpc_id                  = aws_vpc.main.id
cidr_block              = var.public_subnet_b_cidr
availability_zone       = "ap-south-1b"
map_public_ip_on_launch = true

tags = {
Name = "public-subnet-b"
}
}

resource "aws_subnet" "private_a" {
vpc_id            = aws_vpc.main.id
cidr_block        = var.private_subnet_a_cidr
availability_zone = "ap-south-1a"

tags = {
Name = "private-subnet-a"
}
}

resource "aws_subnet" "private_b" {
vpc_id            = aws_vpc.main.id
cidr_block        = var.private_subnet_b_cidr
availability_zone = "ap-south-1b"

tags = {
Name = "private-subnet-b"
}
}

resource "aws_eip" "nat" {
domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
allocation_id = aws_eip.nat.id
subnet_id     = aws_subnet.public_a.id

tags = {
Name = "nat-gateway"
}
}

resource "aws_route_table" "public_rt" {
vpc_id = aws_vpc.main.id
}

resource "aws_route" "public_internet" {
route_table_id         = aws_route_table.public_rt.id
destination_cidr_block = "0.0.0.0/0"
gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table" "private_rt" {
vpc_id = aws_vpc.main.id
}

resource "aws_route" "private_nat" {
route_table_id         = aws_route_table.private_rt.id
destination_cidr_block = "0.0.0.0/0"
nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "public_a" {
subnet_id      = aws_subnet.public_a.id
route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "public_b" {
subnet_id      = aws_subnet.public_b.id
route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "private_a" {
subnet_id      = aws_subnet.private_a.id
route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "private_b" {
subnet_id      = aws_subnet.private_b.id
route_table_id = aws_route_table.private_rt.id
}
